# portfolio-yongyin21

./: .breakpoints  .replit  README.md  practice.py  pyproject.toml  replit.nix
ch01/exercises/: simple.py
ch01/lab/: main.py
ch02/exercises/: drawing.py  myturtle.py
ch02/lab/: main.py
ch03/exercises/: guess.py
ch03/lab/: main.py  test.py
ch04/exercises/: RANDOMWW.py  coinflip.py  dictionaries.py
ch04/lab/: main.py
ch05/classprac/: repeating.py  vending.py
ch05/exercises/: boolean_functions.py  drawing.py  patterns.py  practice2.py  scope.py
ch05/lab/: main.py
ch06/Midterm/: Readme.md  midterm.py
ch06/exercises/: gui_classes.py
ch07/exercises/: boogeyman.py  classwork.py
ch07/lab/: Rectangle.py  Surface.py  main.py
ch08/lab/: StringUtility.py
ch08/milestoneIV/: controller.md
ch09/exercises/: webapi.py
ch09/final/: README.MD  breakingbad.py  breakingbadquotes.py  main.py
ch09/final2/: bobsburgers.py  breakingbad.py  breakingbadquotes.py  kanyewest.py  main.py
