[tool.poetry]
name = "repl_nix_Accomplished-Yong-Tree"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
pandas = "^1.5.2"
requests = "^2.28.1"
yfinance = "^0.1.87"
nba_stats = "^0.1.1"
plotly = "^5.11.0"
matplotlib = "^3.6.2"
DateTime = "^4.7"
alphaVantage-api = "^1.0.33"
alpha-vantage = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
